changed navbar and reveal

--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -53,9 +53,12 @@
         }
 
         .dropdown {
+            // position: absolute;
+            // top: 38px;
+            // right: 0;
             position: absolute;
             top: 38px;
-            right: 0;
+            right: 615px;
             width: 200px;
             background: #e33a93;
             color: #fff;
