added tablet media queries

--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -15,6 +15,7 @@
             // position: relative;
 
             aside {
+                
                 width: 45%;
                 height: 100%;
 
@@ -67,3 +68,4 @@
     }
 }
 
+@import'media';
