--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,6 +1,8 @@
+// @import 'media';
+
 // Variables
-$website-width: 1280px;
-// $main-color: 
+// $website-width: 1280px;
+$main-color: #e33a93; 
 // $light-color: 
 // $medium-color: 
 // $dark-color: 
