--- a/src/scss/Contact.scss
+++ b/src/scss/Contact.scss
@@ -77,7 +77,7 @@
         width: 5rem;
         margin: 1.5rem 0;
         padding: 0.5rem;
-        background: #e33a93;
+        background: $main-color;
         color: #fff;
         border: none;
         cursor: pointer;
