--- a/src/scss/Ellie3.scss
+++ b/src/scss/Ellie3.scss
@@ -94,7 +94,7 @@
                 color: #fff;
                 margin: 2rem 0;
                 padding: 1rem;
-                background: #e33a93;
+                background:$main-color;
                 border-radius: 10px;
                 
                 &:hover {
