--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -1,7 +1,8 @@
-// @import '_utilities';
+@import 'config';
+@import 'media';
 
 #main-nav {
-    background: #e33a93;
+    background:$main-color;
     position: fixed;
     // top: 0;
     // margin-bottom: 50px;
@@ -37,7 +38,7 @@
 
             &:hover {
                 background: #fff;
-                color: #e33a93;
+                color: $main-color;
                 transition: 0.5s;
             }
         }
@@ -57,10 +58,12 @@
             // top: 38px;
             // right: 0;
             position: absolute;
-            top: 38px;
-            right: 615px;
+            top: 40px;
+            // right: 28%;
             width: 200px;
-            background: #e33a93;
+            // right: 615px;
+            // width: 200px;
+            background: $main-color;
             color: #fff;
             // transform: translateX(-45%);
             overflow: hidden;
