--- a/src/scss/PuppyServices.scss
+++ b/src/scss/PuppyServices.scss
@@ -1,4 +1,5 @@
 @import'utilities';
+@import'config';
 
 .services-main {
 
@@ -71,7 +72,7 @@
         }
 
         h2 {
-            color: #e33a93;
+            color:$main-color;
         }
     }
 
@@ -115,7 +116,7 @@
 
             i {
                 padding-right: 0.5rem;
-                color: #e33a93;
+                color:$main-color;
             }
 
 
