--- a/src/scss/Contact.scss
+++ b/src/scss/Contact.scss
@@ -7,6 +7,7 @@
     text-align: center;
 
     img {
+        margin-top: 20px;
         height: 150px;
         width: 400px;
 
@@ -77,7 +78,7 @@
         width: 5rem;
         margin: 1.5rem 0;
         padding: 0.5rem;
-        background: $main-color;
+        background: #e33a93;
         color: #fff;
         border: none;
         cursor: pointer;
