--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -38,6 +38,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-align: center;
             padding: 0.5rem 0;
 
             .footer-links {
