--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -58,9 +58,9 @@
             // top: 38px;
             // right: 0;
             position: absolute;
-            top: 40px;
+            top: 38px;
             // right: 28%;
-            width: 200px;
+            width: 150px;
             // right: 615px;
             // width: 200px;
             background: $main-color;
@@ -71,3 +71,5 @@
         }
     }
 }
+
+@import 'mobileNav';
