--- a/src/scss/MobileNav.scss
+++ b/src/scss/MobileNav.scss
@@ -1,11 +1,11 @@
-// @import 'config';
+@import 'config';
 // @import 'media';
 
 
-$primary-color: rgba(27, 147, 194, 0.753);
+$primary-color: rgba(27, 194, 105, 0.753);
 $secondary-color: rgba(194, 122, 27, 0.904);
-$overlay-color: rgba(255, 255, 255, 0.63);
-$menu-speed: 075s;
+$overlay-color: rgba(255, 255, 255, 0.897);
+$menu-speed: 0.60s;
 
 
 * {
@@ -14,17 +14,155 @@ $menu-speed: 075s;
     box-sizing: border-box;
 }
 
+// Menu content *****************************
 .menu-wrap {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
+
+    .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        > div {
+            background: $overlay-color;
+            border-radius: 50%;
+            width: 200vw;
+            height: 400vw;
+            display: flex;
+            flex: none;
+            align-items: center;
+            justify-content: center;
+            transform: scale(0);
+            transition: all 0.4s ease;
+
+            > div {
+                text-align: center;
+                max-width: 90vw;   
+                max-height: 100vw;
+                opacity: 0;
+                transition: opacity 0.4s ease;
+
+                > ul > li {
+                    font-size: 2rem;
+                    // font-weight: 600;
+                    padding-bottom: 2.5rem;
+
+                    > a {
+                        color: $main-color;
+                        transition: color 0.3s ease;
+
+                        &:hover {
+                            color: lawngreen;
+                        }
+                    }
+                } 
+            }
+        }
+    }
 }
+
+// Show menu animation *******************
+.menu-wrap .toggler:checked ~ .menu {
+    visibility: visible;
+
+    > div {
+        transform: scale(1);
+        transition-duration: $menu-speed;
+
+        > div {
+            opacity: 1;
+            transition: opacity 0.4s ease 0.4s;
+        }
+    }
+
+}
+
+
+// Toggler design & animation *****************************
 
 .menu-wrap .toggler {
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
 }
 
+
+.menu-wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 60px;
+    height: 60px;
+    padding: 1rem;
+    // background: $primary-color;
+    // background: #e33a93;
+    background: #e33a93;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+// Hamburger middle Line // 
+.menu-wrap .hamburger > div {
+    position: relative;
+    flex: none;
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+// Hamburger top and bottom lines //
+.menu-wrap .hamburger > div::before,
+.menu-wrap .hamburger > div::after {
+    content:'';
+    position: absolute;
+    z-index: 1;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+
+}
+
+.menu-wrap .hamburger > div::after {
+    top: 10px;
+}
+
+// Toggler animation********************************
+.menu-wrap .toggler:checked + .hamburger > div {
+    transform: rotate(135deg);
+}
+
+.menu-wrap .toggler:checked + .hamburger > div::before,
+.menu-wrap .toggler:checked + .hamburger > div::after {
+    top: 0;
+    transform: rotate(90deg);
+}
+
+// Rotation on hover when checked
+.menu-wrap .toggler:checked + .hamburger > div {
+    transform: rotate(225deg);
+}
 
 
 
