added mobile display V1.0, cleaned CSS

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,9 +11,14 @@
 
 // General Styles ******************
 
+// body, html {
+//     height: 100%;
+// }
+
 body {
     font-family: 'Open Sans', sans-serif;
     min-width: fit-content;
+    // height: 100%;
     line-height: 1.4;
 
 }
