--- a/src/scss/What.scss
+++ b/src/scss/What.scss
@@ -1,17 +1,14 @@
 @import'config';
 @import'utilities';
- 
+  
 
 #what-main {
     
     line-height: 1.5;
 
     .what-intro {
-        // background: #27c9b8;
-        // color: #fff;
         padding: 2rem 23rem;
-        // padding: 5rem;
-        // margin: 0 18rem;
+
     }
 
     .text-wrapper {
@@ -76,9 +73,6 @@
 
     .what-training {
 
-        // background: #27c9b8;
-        // color: #fff;
-
         .training-container {
             padding: 2rem 23rem;
         }
@@ -87,12 +81,10 @@
 
             padding: 1rem 0;
             margin-left: 1rem;
-            // margin-bottom: 1rem;
 
             p {
                 margin-bottom: 0.6rem;
                 margin-left: 2rem;
-                // font-size: 1.2rem;
             }
 
             .training-lead {
@@ -109,3 +101,6 @@
         }
     }
 }
+
+
+@import'media';
