added Swipe feature (mobile) v1

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -484,6 +484,12 @@
         height: 100%;
     }
 
+    .swiper-slide {
+        width: 500px;
+        height: 500px;
+        // margin: 0 15px;
+    }
+
     // Contact page ***********************
     #contact-main {
         
