--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -90,7 +90,7 @@
     }
 } 
 
-
+ 
 #hello {
 
     .hello-intro {
@@ -206,6 +206,7 @@
 
     img {
         height: 100%;
+        // width: 100%;
     }
 
     .home3-grid {
