--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,3 +1,5 @@
+@import'config';
+
 /*Media*/
 
 @media (max-width: 768px) {
@@ -321,7 +323,7 @@
     }
 
     .hello2 {
-
+ 
         .container {
             padding: 0rem;
 
@@ -342,8 +344,12 @@
             padding: 0rem;
         }
 
+    
+
         .home-content-text {
             padding-bottom: 2rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
 
             p {
                 padding-bottom: 2rem;
@@ -482,13 +488,30 @@
     // Gallery modal *********************
     .modal-content {
         height: 100%;
+        
     }
+
+    .swiper-container-horizontal .swiper-pagination-bullets .swiper-pagination-bullet {
+        background-color: $main-color;
+    }
+
+    // .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+    //     color: #e33a93;
+    // } 
+
 
     .swiper-slide {
         width: 500px;
         height: 500px;
         // margin: 0 15px;
+        // .swiper-container .swiper-container-initialized .swiper-container-horizontal {
+
+        //     .swiper-pagination-bullet {
+        //             color: #e33a93;
+        //     }
+        // }
     }
+
 
     // Contact page ***********************
     #contact-main {
